# 8085_simulator

./: .gitignore  8085_MP_sim.cpp  8085_MP_sim.h  8085_simulator.sln  8085_simulator.vcxproj  8085_simulator.vcxproj.filters  ALU.cpp  ALU.h  CMakeLists.txt  CPU.cpp  CPU.h  Fibonnaci.txt  Head_1.h  IO.cpp  IO.h  IOHandler.cpp  IOHandler.h  Inst_Head.h  Instructions.cpp  Instructions.h  InterruptControl.cpp  LICENSE  MakeHead.py  Memory.cpp  Memory.h  README.md  Registers.cpp  Registers.h  SECURITY.md  arithmeticProgression.txt  bcd2bin.txt  bubbleSort.txt  ch.py  check01.txt  main.cpp  mul.txt  prefixAND.txt  prefixOR.txt  prefixSum.txt  program.txt  (+6 more)
8085_simulator/: ALU.cpp  CPU.cpp  Instructions.cpp
8085_simulator/headers/: ALU.h  IOHandler.h  Instructions.h  Memory.h  utils.h
8085_simulator/resources/: ALU.cpp  main.cpp
Headers/: CLI.h  CPU.h  Compiler.h  Decoder.h  Head_1.h  Head_2.h  IO.h  IODevice.h  IOHandler.h  Instructions.h  InterruptControl.h  Memory.h  Parser.h  Registers.h  UIManager.h  utils.h
Headers/InstructionHeaders/: ACI.h  ADC.h  ADD.h  ADI.h  ANA.h  ANI.h  CALL.h  CC.h  CM.h  CMA.h  CMC.h  CMP.h  CNC.h  CNZ.h  CP.h  CPE.h  CPI.h  CPO.h  CZ.h  DAA.h  DAD.h  DCR.h  DCX.h  DI.h  EI.h  HLT.h  IN.h  INR.h  INX.h  Inst_Head.h  JC.h  JM.h  JMP.h  JNC.h  JNZ.h  JP.h  JPE.h  JPO.h  JZ.h  LDA.h  (+43 more)
Headers/Parsing/: Lexer.h  Parser.h  token.h
Source/: ALU.cpp  CPU.cpp  Compiler.cpp  Decoder.cpp  IO.cpp  IODevice.cpp  IOHandler.cpp  Instructions.cpp  InterruptControl.cpp  Memory.cpp  Parser.cpp  Registers.cpp  UIManager.cpp  fill.py  main.cpp  memory.csv  program.txt  t.py  tinyfiledialogs.c  utils.cpp
Source/Instructions/: ACI.cpp  ADC.cpp  ADD.cpp  ADI.cpp  ANA.cpp  ANI.cpp  CALL.cpp  CC.cpp  CM.cpp  CMA.cpp  CMC.cpp  CMP.cpp  CNC.cpp  CNZ.cpp  CP.cpp  CPE.cpp  CPI.cpp  CPO.cpp  CZ.cpp  DAA.cpp  DAD.cpp  DCR.cpp  DCX.cpp  DI.cpp  EI.cpp  HLT.cpp  IN.cpp  INR.cpp  INX.cpp  JC.cpp  JM.cpp  JMP.cpp  JNC.cpp  JNZ.cpp  JP.cpp  JPE.cpp  JPO.cpp  JZ.cpp  LDA.cpp  LDAX.cpp  (+42 more)
Source/Parsing_Imp/: Parser.cpp  lexer.cpp
Tests/: Fibonnaci.txt  MaxAndMin.txt  add.txt  add16.txt  arithmeticProgression.txt  bcd2bin.txt  bubbleSort.txt  bubbleSort2.txt  bubbleSort3.txt  check01.txt  countEven.txt  cube.txt  div8.txt  factHL.txt  fibonaci.txt  findLargestOdd.txt  incrementA.txt  movBlock.txt  mul.txt  nElement.txt  prefixAND.txt  prefixOR.txt  prefixSum.txt  prefixXOR.txt  sqrt.txt  sqrtFn.txt  sub16.txt  sub8.txt  suffixAND.txt  suffixOR.txt  suffixSum.txt  sumOfDigitsInBCD.txt
enc_temp_folder/20c0127d4351ece1661a9f68432a3/: Parser.cpp
enc_temp_folder/c4c6c46c181156674806556c1a2cd7/: Instructions.cpp
source/: ALU.cpp  CPU.cpp  IOHandler.cpp  Instructions.cpp  Memory.cpp  index.h  main.cpp  program.txt  utils.cpp
source/headers/: ALU.h  CPU.h  IOHandler.h  Instructions.h  Master.h  Memory.h  Registers.h  utils.h
